Revision history for Perl extension WebService::Solr.

0.04  XXX
    - add make_immutable to Solr.pm

0.03  Thu Jan 15 2009
    - fix typo (Thanks cog)
    - pod fixes
    - try to work around old LWP versions when setting HTTP headers
    - require URI >= 1.28
    - require XML::Generator >= 0.94

0.02  Thu Oct 09 2008
    - fix pager creation, missing prereq
    - add a simple facet_counts() shortcut method

0.01  Tue Oct 07 2008
    - original version;